[package]
name = "lll"
version = "0.0.5"
authors = ["Zac Anger <zac@zacanger.com>"]
edition = "2018"
description = "Simple terminal file manager"
license = "MIT"
readme = "README.md"
keywords = ["cli", "terminal", "file-manager", "file"]
repository = "https://github.com/zacanger/lll"
homepage = "https://github.com/zacanger/lll"

[dependencies]
cursive = "0.12.0"
open = "1.2.2"

[[bin]]
name = "lll"
path = "src/main.rs"
