[package]
name = "lll"
version = "0.0.8"
authors = ["Zac Anger <zac@zacanger.com>"]
edition = "2018"
description = "Simple terminal file manager"
license = "MIT"
readme = "README.md"
keywords = ["cli", "terminal", "file-manager", "file"]
repository = "https://github.com/zacanger/lll"
homepage = "https://github.com/zacanger/lll"

[[bin]]
path = "src/main.rs"
name = "lll"

[dependencies]
fern = "0.5"
walkdir = "2.2.6"
alphanumeric-sort = "1.0.3"
uname = "0.1.1"
users = "0.8.0"
failure = "0.1.2"
failure_derive = "0.1.3"
unicode-width = "0.1.5"

[dependencies.cursive]
version = "0.9"
default-features = false
features = ["termion-backend"]
