[package]
name = "lll"
version = "0.1.0"
authors = ["Zac Anger <zac@zacanger.com>"]
edition = "2018"
description = "Simple terminal file manager"
license = "LGPL-3"
readme = "README.md"
keywords = ["cli", "terminal", "file-manager", "file"]
repository = "https://github.com/zacanger/lll"
homepage = "https://github.com/zacanger/lll"

[[bin]]
path = "src/main.rs"
name = "lll"

[dependencies]
alphanumeric-sort = "1.0.7"
dirs = "2.0.2"
fs_extra = "1.1.0"
lazy_static = "1.3.0"
libc = "0.2.62"
open = "1.3.2"
rustyline = "5.0.2"
serde = "1.0.99"
serde_derive = "1.0.99"
structopt = "0.2.18"
toml = "0.5.3"
unicode-width = "0.1.6"
users = "0.9.1"
xdg = "2.2.0"

[dependencies.ncurses]
version = "5.99.0"
features = [ "extended_colors", "panel", "wide" ]

[dependencies.wordexp]
version = "^0"
git = "https://github.com/kamiyaa/wordexp-rs"
branch="dev"

[features]
default = []
